--- a/css/sass/_reset.scss
+++ b/css/sass/_reset.scss
@@ -3,6 +3,7 @@
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
 	font-family: 'Open Sans', sans-serif;
+	text-decoration: none;
 }
 
 html, body, div, span, applet, object, iframe,
