--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,10 +1,10 @@
 @import "settings";
 
-
 @import "bourbon";
 @import "neat";
 
 @import "mixins";
+@import "forms";
 
 //Browser default style reset
 @import "reset";
@@ -14,7 +14,7 @@
 #sidebar {
 	width: 120px; height: 100%;
 	position: fixed;
-	background: url(../assets/logo-clear.png) center 95% no-repeat #000;
+	background: url(../assets/logo-clear.png) center 97% no-repeat lighten(#000, 5%);
 	background-size: auto 200px;
 	@include transition(0.15s ease all);
 	@include breakpoint(baby-bear){
@@ -41,8 +41,8 @@
 				padding: 20px 0px;
 				text-decoration: none;
 				&:hover {
-					background: #111;
-					box-shadow: inset 0px 0px 5px 2px #000;
+					background: #222;
+					box-shadow: inset 0px 0px 10px 2px #000;
 					color: #fff;
 					text-shadow: 0px 0px 15px #aaa;
 				}
@@ -60,12 +60,74 @@
 	}
 
 	#toolbar {
-		width: 100%; height: 75px;
-		@include linear-gradient(top, #303030, #222);
+		width: 100%; height: 55px;
+		@include linear-gradient(top, #333, #111);
 		position: relative;
 		@include breakpoint(baby-bear){
 			background: url(../assets/logo.png) 13px 13px no-repeat #111;
 			background-size: auto 60%;
+		}
+
+		#dashboard {
+			height: 55px; width: auto;
+			@include linear-gradient(top, #333, #111);
+			position: relative; float: right;
+			margin-right: 20px;
+			@include flexbox();
+
+			.welcome {
+				color: #fff;
+				font-family: 'Museo Sans';
+				padding: 0px 20px;
+				img {
+					height: 30px; width: auto;
+					margin-right: 10px;
+					border-radius: 200%;
+					vertical-align: middle;
+				}
+			}
+
+			.arrow {
+				height: 100%; width: 55px;
+				display: block; 
+				background: url(../assets/arrow-down.png) center center no-repeat;
+				background-size: 15px;
+				cursor: pointer;
+				box-shadow: inset 0px -10px 5px #111;
+				&:hover {
+					background: url(../assets/arrow-down.png) #222 center center no-repeat;
+					background-size: 15px;
+					box-shadow: inset 0px 0px 10px #000;
+				}
+			}
+		}
+
+		#toolbox {
+			width: 300px; height: auto;
+			@include linear-gradient(top, #444, #333);
+			position: fixed; top: 55px; right: 20px;
+			z-index: 999;
+			display: none;
+			border-radius: 0px 0px 10px 10px;
+			box-shadow: inset 0px 0px 30px #222;
+
+			ul {
+				a {
+					display: block;
+					padding: 25px;
+					color: #fff;
+					font-size: 18px; font-family: 'Museo Sans';
+					border-bottom: solid 2px #444;
+					border-radius: 0px;
+					&:hover {
+						box-shadow: inset 0px 0px 5px #111;
+					}
+
+					&:nth-last-of-type(1) {
+						border-radius: 0px 0px 10px 10px !important;
+					}
+				}
+			}
 		}
 
 		.title {
@@ -77,54 +139,52 @@
 			}
 		}
 
-		form {
-			.search {
-				position: absolute;
-				right: 0px;
-				height: 75px; width: 200px;
-				border: none; outline: none;
-				background: rgba(0,0,0,0.45);
-				color: #666;
-				font-size: 1.5em; font-weight: 300;
-				padding: 0px 10px;
-				text-transform: uppercase;
+	#search-bar {
+		float: left;
+		position: relative;
+		.search {
+			position: relative;
+			height: 55px; width: 200px;
+			border: none; outline: none;
+			background: rgba(0,0,0,0.25);
+			color: #666;
+			font-size: 1.5em; font-weight: 300;
+			padding: 0px 10px;
+			text-transform: uppercase; letter-spacing: 4px;
+			@include transition(0.75s ease all);
+			&:focus {
+				color: #fff;
+				@include linear-gradient(top, #444, #333);
+				width: 350px;
+				padding-left: 25px;
+				box-shadow: inset 0px 0px 5px #111;
 				@include transition(0.75s ease all);
-				&:focus {
-					color: #fff;
-					background: #111;
-					width: 350px;
-					padding-left: 25px;
-					@include transition(0.75s ease all);
-				}
 			}
+		}
 
-			.react-circle {
-				width: 30px; height: 30px;
-				background: transparent;
-				border-radius: 200%;
-				border: solid 5px #666;
-				position: absolute;
-				right: 20px; top: 23px;
-				@include transition(0.5s ease all);
-				&:hover {
-					background: #aaa;
-					border: solid 6px #fff;
-					@include transition(0.75s ease all);
-					@include transform(scale(0.35));
-				}
-			}
+		.react-circle {
+			width: 25px; height: 25px;
+			background: transparent;
+			border-radius: 200%;
+			border: solid 5px #666;
+			margin: 0px 10px;
+			position: absolute; right: 10px; top: 15px;
+			@include transition(0.5s ease all);
+		}
 
-			.react {
-				border: solid 15px $green;
-				@include transition(0.75s ease all);
-				@include transform(scale(0.4));
-			}
-
+		.react {
+			border: solid 15px $green;
+			@include transition(0.75s ease all);
+			@include transform(scale(0.3));
 		}
 	}
 
+		
+
+	}
+
 	#viewer {
-		max-width: 100%; 
+		max-width: 100%; height: auto;
 		background: #ccc;
 		position: relative;
 		overflow: auto;
@@ -132,13 +192,29 @@
 		.wrapper {
 			@include outer-container();
 			max-width: 98% !important;
+
+			h2 {
+				color: #888;
+				font-size: 36px;
+				padding: 15px 0px;
+				font-family: 'Museo Sans';
+				font-weight: 700;
+			}
+
+			hr {	
+			    border: 0;
+			    height: 0;
+			    margin: 0px;
+			    border-top: 1px solid rgba(0, 0, 0, 0.25);
+			    border-bottom: 1px solid rgba(255, 255, 255, 0.35);	
+			}
 		}
 
 		.code {
 			@include span-columns(2);
 			@include omega(6n);
-			padding: 30px;
-			background: #222;
+			padding: 25px;
+			background: #111;
 			box-shadow: 2px 2px 0px 1px #666;
 			margin-top: 1em;
 			color: #fff; font-size: 18px; font-family: 'Museo Sans';
@@ -168,19 +244,13 @@
 		// Resizable handle
 		.ui-icon {
 			background: url(../assets/handle.jpg) #000 no-repeat center center;
-			background-size: 90px 10px;
-			height: 25px; width: 100px;
-			right: 150px; bottom: -5px;
-			border-radius: 5px 5px 0px 0px;
+			background-size: 200px 6px;
+			height: 20px; width: 100%;
+			bottom: 0px !important;
+			box-shadow: 0px 0px 5px 0px #000;
 			position: absolute !important;
 			cursor: row-resize;
 			@include transition(0.15s ease all);
-			&:hover {
-				@include transition(0.15s ease all);
-				height: 40px;
-				background: url(../assets/handle.jpg) #000 repeat-y center center;
-				background-size: 90px 10px;
-			}
 			@include breakpoint(baby-bear){
 				display: none;
 			}
