Added login page styling, additional minor CSS tweaks

--- a/css/sass/_settings.scss
+++ b/css/sass/_settings.scss
@@ -1,5 +1,13 @@
-// Variables
+// Color Palette
 $green: #739864;
+$blue: #4792b1;
+
+// Logo Sizes
+
+.med-logo {
+	width: 80px; height: auto;
+	padding: 15px;
+}
 
 // Set Bourbon Neat Gutter Size
 $gutter: 0.5em;
