--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -9,13 +9,24 @@
 //Browser default style reset
 @import "reset";
 
+// Page Specific Styles
+@import "login";
+
+
+
+html { 
+  background: url(../assets/forest-bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 
 #sidebar {
 	width: 120px; height: 100%;
 	position: fixed;
-	background: url(../assets/logo-clear.png) center 97% no-repeat lighten(#000, 5%);
-	background-size: auto 200px;
+	background: lighten(#000, 5%);
 	@include transition(0.15s ease all);
 	@include breakpoint(baby-bear){
 		display: none;
@@ -61,7 +72,7 @@
 
 	#toolbar {
 		width: 100%; height: 55px;
-		@include linear-gradient(top, #333, #111);
+		@include linear-gradient(top, #222, #111);
 		position: relative;
 		@include breakpoint(baby-bear){
 			background: url(../assets/logo.png) 13px 13px no-repeat #111;
@@ -78,7 +89,7 @@
 			.welcome {
 				color: #fff;
 				font-family: 'Museo Sans';
-				padding: 0px 20px;
+				padding: 0px 50px 0px 25px;
 				img {
 					height: 30px; width: auto;
 					margin-right: 10px;
@@ -103,28 +114,27 @@
 		}
 
 		#toolbox {
-			width: 300px; height: auto;
-			@include linear-gradient(top, #444, #333);
+			width: 290px; height: auto;
+			@include linear-gradient(top, #222, #111);
 			position: fixed; top: 55px; right: 20px;
 			z-index: 999;
 			display: none;
 			border-radius: 0px 0px 10px 10px;
-			box-shadow: inset 0px 0px 30px #222;
+			box-shadow: inset 0px 0px 30px #222, 0px 0px 15px #222;
 
 			ul {
+				padding-bottom: 25px;
 				a {
 					display: block;
 					padding: 25px;
 					color: #fff;
 					font-size: 18px; font-family: 'Museo Sans';
-					border-bottom: solid 2px #444;
+					border-bottom: solid 2px #333;
 					border-radius: 0px;
 					&:hover {
 						box-shadow: inset 0px 0px 5px #111;
-					}
-
-					&:nth-last-of-type(1) {
-						border-radius: 0px 0px 10px 10px !important;
+						background: #303030;
+						border-bottom: solid 2px $green;
 					}
 				}
 			}
@@ -146,7 +156,7 @@
 			position: relative;
 			height: 55px; width: 200px;
 			border: none; outline: none;
-			background: rgba(0,0,0,0.25);
+			background: rgba(0,0,0,0.35);
 			color: #666;
 			font-size: 1.5em; font-weight: 300;
 			padding: 0px 10px;
@@ -154,7 +164,7 @@
 			@include transition(0.75s ease all);
 			&:focus {
 				color: #fff;
-				@include linear-gradient(top, #444, #333);
+				background: rgba(255,255,255,0.15);
 				width: 350px;
 				padding-left: 25px;
 				box-shadow: inset 0px 0px 5px #111;
@@ -168,7 +178,7 @@
 			border-radius: 200%;
 			border: solid 5px #666;
 			margin: 0px 10px;
-			position: absolute; right: 10px; top: 15px;
+			position: absolute; right: 10px; top: 13px;
 			@include transition(0.5s ease all);
 		}
 
@@ -184,45 +194,52 @@
 	}
 
 	#viewer {
-		max-width: 100%; height: auto;
-		background: #ccc;
+		width: 100%; height: auto;
+		padding: 0px;
+		@include linear-gradient(bottom, #000, #252525);
+		/* background: url(../assets/forest-bg.jpg) no-repeat center center fixed; 
+ 	 	-webkit-background-size: cover;
+  		-moz-background-size: cover;
+  		-o-background-size: cover;
+  		background-size: cover; */
 		position: relative;
 		overflow: auto;
+
+		h2 {
+			color: #888;
+			font-size: 36px;
+			padding: 20px;
+			font-family: 'Museo Sans';
+			font-weight: 700;
+		}
+
+		hr {	
+		    border: 0;
+		    height: 0;
+		    margin: 0px 20px;
+		    border-top: 1px solid rgba(255, 255, 255, 0.35);	
+		    border-bottom: 1px solid rgba(0, 0, 0, 0.9);	
+		}
 
 		.wrapper {
 			@include outer-container();
 			max-width: 98% !important;
-
-			h2 {
-				color: #888;
-				font-size: 36px;
-				padding: 15px 0px;
-				font-family: 'Museo Sans';
-				font-weight: 700;
-			}
-
-			hr {	
-			    border: 0;
-			    height: 0;
-			    margin: 0px;
-			    border-top: 1px solid rgba(0, 0, 0, 0.25);
-			    border-bottom: 1px solid rgba(255, 255, 255, 0.35);	
-			}
+			padding-bottom: 50px;
 		}
 
 		.code {
 			@include span-columns(2);
 			@include omega(6n);
-			padding: 25px;
-			background: #111;
-			box-shadow: 2px 2px 0px 1px #666;
+			padding: 30px;
+			background:  darken($green, 10%);
+			border-radius: 10px;
 			margin-top: 1em;
 			color: #fff; font-size: 18px; font-family: 'Museo Sans';
 			text-align: center;
-			border-radius: 10px;
 			cursor: pointer;
 			&:hover {
-				background: darken($green, 10%);
+				color: #fff;
+				background: darken($green, 25%);
 			}
 
 			@include breakpoint(papa-bear){
@@ -243,8 +260,9 @@
 
 		// Resizable handle
 		.ui-icon {
-			background: url(../assets/handle.jpg) #000 no-repeat center center;
-			background-size: 200px 6px;
+			background: url(../assets/handle.jpg) #000 no-repeat center center ;
+			background-position: relative;
+			background-size: 200px;
 			height: 20px; width: 100%;
 			bottom: 0px !important;
 			box-shadow: 0px 0px 5px 0px #000;
@@ -254,6 +272,7 @@
 			@include breakpoint(baby-bear){
 				display: none;
 			}
+
 		}
 		.ui-resizable-handle {
 			cursor: row-resize;
