--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,12 @@
+.med-logo {
+  width: 80px;
+  height: auto;
+  padding: 15px; }
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
-
-.code:nth-child(2n+1) {
-  background: #57734c !important; }
-  .code:nth-child(2n+1):hover {
-    background: #222 !important; }
-
-.code:nth-child(2n+2) {
-  background: #3b4e33 !important; }
-  .code:nth-child(2n+2):hover {
-    background: #222 !important; }
 
 #search-bar {
   float: right; }
@@ -69,12 +64,79 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+#login-form {
+  width: 300px;
+  height: auto;
+  top: 12%;
+  left: 50%;
+  margin-left: -150px;
+  display: none;
+  background-color: #222222;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #222222), color-stop(100%, #151515));
+  background-image: -webkit-linear-gradient(top, #222222, #151515);
+  background-image: linear-gradient(to bottom,#222222, #151515);
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 15px rgba(255, 255, 255, 0.05);
+  padding: 20px;
+  position: absolute; }
+  #login-form input {
+    margin: 10px 0px; }
+  #login-form label {
+    font-family: 'Museo Sans';
+    color: #555;
+    letter-spacing: 2px;
+    font-size: 12px; }
+  #login-form hr {
+    border: none;
+    border-top: solid 1px #000;
+    border-bottom: solid 1px #444;
+    width: 80%; }
+  #login-form input[type="text"], #login-form input[type="password"] {
+    height: 50px;
+    width: 80%;
+    background: #000;
+    outline: none;
+    border: none;
+    color: #666;
+    padding: 0px 10px;
+    font-size: 26px; }
+    #login-form input[type="text"]:focus, #login-form input[type="password"]:focus {
+      color: #fff; }
+  #login-form input[type="submit"] {
+    padding: 15px 25px;
+    background: #739864;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
+    transition: all ease 0.5s; }
+    #login-form input[type="submit"]:hover {
+      -webkit-transition: all ease 0.5s;
+      -moz-transition: all ease 0.5s;
+      transition: all ease 0.5s;
+      background: #81a373;
+      cursor: pointer;
+      box-shadow: 0px 0px 20px 0px #aac1a1; }
+
+#loader {
+  top: 10%;
+  left: 50%;
+  position: fixed; }
+
+html {
+  background: url(../assets/forest-bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover; }
+
 #sidebar {
   width: 120px;
   height: 100%;
   position: fixed;
-  background: url(../assets/logo-clear.png) center 97% no-repeat #0d0d0d;
-  background-size: auto 200px;
+  background: #0d0d0d;
   -webkit-transition: 0.15s ease all;
   -moz-transition: 0.15s ease all;
   transition: 0.15s ease all; }
@@ -111,10 +173,10 @@ table {
   #main-container #toolbar {
     width: 100%;
     height: 55px;
-    background-color: #333333;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #333333), color-stop(100%, #111111));
-    background-image: -webkit-linear-gradient(top, #333333, #111111);
-    background-image: linear-gradient(to bottom,#333333, #111111);
+    background-color: #222222;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #222222), color-stop(100%, #111111));
+    background-image: -webkit-linear-gradient(top, #222222, #111111);
+    background-image: linear-gradient(to bottom,#222222, #111111);
     position: relative; }
     @media (max-width: 650px) {
       #main-container #toolbar {
@@ -142,7 +204,7 @@ table {
       #main-container #toolbar #dashboard .welcome {
         color: #fff;
         font-family: 'Museo Sans';
-        padding: 0px 20px; }
+        padding: 0px 50px 0px 25px; }
         #main-container #toolbar #dashboard .welcome img {
           height: 30px;
           width: auto;
@@ -162,31 +224,33 @@ table {
           background-size: 15px;
           box-shadow: inset 0px 0px 10px #000; }
     #main-container #toolbar #toolbox {
-      width: 300px;
+      width: 290px;
       height: auto;
-      background-color: #444444;
-      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #444444), color-stop(100%, #333333));
-      background-image: -webkit-linear-gradient(top, #444444, #333333);
-      background-image: linear-gradient(to bottom,#444444, #333333);
+      background-color: #222222;
+      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #222222), color-stop(100%, #111111));
+      background-image: -webkit-linear-gradient(top, #222222, #111111);
+      background-image: linear-gradient(to bottom,#222222, #111111);
       position: fixed;
       top: 55px;
       right: 20px;
       z-index: 999;
       display: none;
       border-radius: 0px 0px 10px 10px;
-      box-shadow: inset 0px 0px 30px #222; }
-      #main-container #toolbar #toolbox ul a {
-        display: block;
-        padding: 25px;
-        color: #fff;
-        font-size: 18px;
-        font-family: 'Museo Sans';
-        border-bottom: solid 2px #444;
-        border-radius: 0px; }
-        #main-container #toolbar #toolbox ul a:hover {
-          box-shadow: inset 0px 0px 5px #111; }
-        #main-container #toolbar #toolbox ul a:nth-last-of-type(1) {
-          border-radius: 0px 0px 10px 10px !important; }
+      box-shadow: inset 0px 0px 30px #222, 0px 0px 15px #222; }
+      #main-container #toolbar #toolbox ul {
+        padding-bottom: 25px; }
+        #main-container #toolbar #toolbox ul a {
+          display: block;
+          padding: 25px;
+          color: #fff;
+          font-size: 18px;
+          font-family: 'Museo Sans';
+          border-bottom: solid 2px #333;
+          border-radius: 0px; }
+          #main-container #toolbar #toolbox ul a:hover {
+            box-shadow: inset 0px 0px 5px #111;
+            background: #303030;
+            border-bottom: solid 2px #739864; }
     #main-container #toolbar .title {
       position: absolute;
       left: 20px;
@@ -206,7 +270,7 @@ table {
         width: 200px;
         border: none;
         outline: none;
-        background: rgba(0, 0, 0, 0.25);
+        background: rgba(0, 0, 0, 0.35);
         color: #666;
         font-size: 1.5em;
         font-weight: 300;
@@ -218,10 +282,7 @@ table {
         transition: 0.75s ease all; }
         #main-container #toolbar #search-bar .search:focus {
           color: #fff;
-          background-color: #444444;
-          background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #444444), color-stop(100%, #333333));
-          background-image: -webkit-linear-gradient(top, #444444, #333333);
-          background-image: linear-gradient(to bottom,#444444, #333333);
+          background: rgba(255, 255, 255, 0.15);
           width: 350px;
           padding-left: 25px;
           box-shadow: inset 0px 0px 5px #111;
@@ -237,7 +298,7 @@ table {
         margin: 0px 10px;
         position: absolute;
         right: 10px;
-        top: 15px;
+        top: 13px;
         -webkit-transition: 0.5s ease all;
         -moz-transition: 0.5s ease all;
         transition: 0.5s ease all; }
@@ -252,48 +313,57 @@ table {
         -o-transform: scale(0.3);
         transform: scale(0.3); }
   #main-container #viewer {
-    max-width: 100%;
+    width: 100%;
     height: auto;
-    background: #ccc;
+    padding: 0px;
+    background-color: black;
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, black), color-stop(100%, #252525));
+    background-image: -webkit-linear-gradient(bottom, black, #252525);
+    background-image: linear-gradient(to top,black, #252525);
+    		/* background: url(../assets/forest-bg.jpg) no-repeat center center fixed; 
+     	 	-webkit-background-size: cover;
+      		-moz-background-size: cover;
+      		-o-background-size: cover;
+      		background-size: cover; */
     position: relative;
     overflow: auto; }
+    #main-container #viewer h2 {
+      color: #888;
+      font-size: 36px;
+      padding: 20px;
+      font-family: 'Museo Sans';
+      font-weight: 700; }
+    #main-container #viewer hr {
+      border: 0;
+      height: 0;
+      margin: 0px 20px;
+      border-top: 1px solid rgba(255, 255, 255, 0.35);
+      border-bottom: 1px solid rgba(0, 0, 0, 0.9); }
     #main-container #viewer .wrapper {
       *zoom: 1;
       max-width: 68em;
       margin-left: auto;
       margin-right: auto;
-      max-width: 98% !important; }
+      max-width: 98% !important;
+      padding-bottom: 50px; }
       #main-container #viewer .wrapper:before, #main-container #viewer .wrapper:after {
         content: " ";
         display: table; }
       #main-container #viewer .wrapper:after {
         clear: both; }
-      #main-container #viewer .wrapper h2 {
-        color: #888;
-        font-size: 36px;
-        padding: 15px 0px;
-        font-family: 'Museo Sans';
-        font-weight: 700; }
-      #main-container #viewer .wrapper hr {
-        border: 0;
-        height: 0;
-        margin: 0px;
-        border-top: 1px solid rgba(0, 0, 0, 0.25);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.35); }
     #main-container #viewer .code {
       display: block;
       float: left;
       margin-right: 0.88763%;
       width: 15.92697%;
-      padding: 25px;
-      background: #111;
-      box-shadow: 2px 2px 0px 1px #666;
+      padding: 30px;
+      background: #5c7950;
+      border-radius: 10px;
       margin-top: 1em;
       color: #fff;
       font-size: 18px;
       font-family: 'Museo Sans';
       text-align: center;
-      border-radius: 10px;
       cursor: pointer; }
       #main-container #viewer .code:last-child {
         margin-right: 0; }
@@ -302,7 +372,8 @@ table {
       #main-container #viewer .code:nth-child(6n+1) {
         clear: left; }
       #main-container #viewer .code:hover {
-        background: #5c7950; }
+        color: #fff;
+        background: #394b31; }
       @media (max-width: 1660px) {
         #main-container #viewer .code {
           display: block;
@@ -341,7 +412,8 @@ table {
             clear: left; } }
     #main-container #viewer .ui-icon {
       background: url(../assets/handle.jpg) black no-repeat center center;
-      background-size: 200px 6px;
+      background-position: relative;
+      background-size: 200px;
       height: 20px;
       width: 100%;
       bottom: 0px !important;
