--- a/css/sass/_login.scss
+++ b/css/sass/_login.scss
@@ -55,6 +55,71 @@
 	}
 }
 
+#register-form {
+	width: 500px; height: auto;
+	top: 12%; left: 50%; margin-left: -250px;
+	@include linear-gradient(top, #222, #151515);
+	border-radius: 5px;
+	box-shadow: 0px 0px 0px 15px rgba(255,255,255,0.05);
+	padding: 20px;
+	position: absolute;
+
+	h2 {
+		color: #777;
+		font-family: 'Museo Sans';
+		font-size: 22px; letter-spacing: 5px;
+		padding: 20px;
+	}
+
+	input {
+		margin: 10px 0px;
+	}
+
+	label {
+		font-family: 'Museo Sans';
+		color: #555;
+		letter-spacing: 2px;
+		font-size: 12px;
+	}
+
+	hr {
+		border: none;
+		border-top: solid 1px #000;
+		border-bottom: solid 1px #444;
+		width: 80%;
+	}
+
+	input[type="text"], input[type="password"], input[type="email"] {
+		height: 50px; width: 80%;
+		background: #000;
+		outline: none;
+		border: none;
+		color: #666;
+		padding: 0px 10px;
+		font-size: 26px;
+		&:focus {
+			color: #fff;
+		}
+	}
+
+	input[type="submit"] {
+		padding: 15px 25px;
+		background: $green;
+		outline: none; border: none;
+		font-size: 16px;
+		border-radius: 5px;
+		@include transition(all ease 0.5s);
+		&:hover {
+			@include transition(all ease 0.5s);
+			background: lighten($green, 5%);
+			cursor: pointer;
+			box-shadow: 0px 0px 20px 0px lighten($green, 20%);
+		}
+	}
+}
+
+
+
 #loader {
 	top: 10%; left: 50%;
 	position: fixed;
