--- a/css/sass/_settings.scss
+++ b/css/sass/_settings.scss
@@ -2,6 +2,36 @@
 $green: #739864;
 $blue: #4792b1;
 
+// Assets
+
+.button {
+	padding: 15px 25px;
+	background: $green;
+	outline: none; border: none;
+	font-size: 16px;
+	border-radius: 5px;
+	color: #000;
+	font-family: 'Museo Sans';
+	display: inline-block;
+	&:hover {
+		background: lighten($green, 5%);
+		cursor: pointer;
+		box-shadow: 0px 0px 20px 0px lighten($green, 20%);
+	}
+}
+
+.register {
+	font-family: 'Museo Sans';
+	color: #555;
+	letter-spacing: 2px;
+	font-size: 12px;
+	padding: 10px;
+	display: block;
+	&:hover {
+		color: $green;
+	}
+}
+
 // Logo Sizes
 .med-logo {
 	width: 80px; height: auto;
